--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
   app: "docker-react"
+  instance_type: "t2.small"
   env: "dockerreact-env"
   bucket_name: "elasticbeanstalk-us-west-2-110731418076"
   bucket_path: "docker-react"
